[gd_scene load_steps=5 format=3 uid="uid://byamp4uhwbu3u"]

[ext_resource type="Script" path="res://Scripts/Bullet.gd" id="1_p01sk"]
[ext_resource type="Texture2D" uid="uid://nlugi6a13aqb" path="res://Assets/Sprites/New Piskel-1.png (2)-1.png-1.png.png" id="2_icdc0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sinh2"]
size = Vector2(150, 106.667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3v6g"]
size = Vector2(160, 80)

[node name="Bullet" type="CharacterBody2D" groups=["Bullet", "DamageType"]]
scale = Vector2(0.15, 0.113)
disable_mode = 2
collision_layer = 7
collision_mask = 7
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_p01sk")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.25, 0.729)
texture = ExtResource("2_icdc0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sinh2")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_m3v6g")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
